--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,12 +39,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       - name: Log into Github registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Docker build
         run: |
-          docker buildx build --push --platform="linux/amd64,linux/arm64" --build-arg VERSION=${GITHUB_REF##*/} -t ghcr.io/goware/jwtutil:${GITHUB_REF##*/} -t ghcr.io/goware/jwtutil:latest .
+          docker build --build-arg VERSION=${GITHUB_REF##*/} -t ghcr.io/goware/jwtutil:${GITHUB_REF##*/} -t ghcr.io/goware/jwtutil:latest .
           docker push ghcr.io/goware/jwtutil:${GITHUB_REF##*/}
           docker push ghcr.io/goware/jwtutil:latest
